frontend/src/assets/main.css
@import "./base.css";

html {
  font-size: 18px;
}

body {
  min-height: 100vh;
  color: var(--color-text);
  background: var(--color-background);
  transition: color 0.5s, background-color 0.5s;
  line-height: 1.6;
  font-family: 'PT-Root-UI_Regular', Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  font-size: 15px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

header {
  position: sticky;
  z-index: 10;
  top: 0;
  background: var(--color-background-header);
  display: flex;
  justify-content: center;
  margin-bottom: 1rem;
  margin: 0 auto;
  max-width: var(--width-content);
  padding: var(--padding-content);
  padding-top: 3rem;
  padding-bottom: 4rem;
}

a {
  color: var(--color-feature);
  text-decoration: none;
}

a:hover {
  color: var(--color-feature);
}

label {
  color: var(--color-simple);
}

.underline-decoration:hover {
  color: var(--color-feature);
  background-size: 100% 1px;
  background-repeat: repeat-x;
  background-position: 0 calc(100% - 1px);
  background-image: linear-gradient(to right, var(--color-feature) 100%, rgba(255, 255, 255, 0) 0%);
}

.brightness-hover:hover {
  filter: brightness(80%);
  transition: 0.25s;
}

/* .brightness-hover {
  background-size: inherit;
  background-repeat: inherit;
  background-position: inherit;
  background-image: inherit;
} */

body {
  color: var(--color-text);
}

hr {
  height: 3px;
  color: var(--color-simple);
}

input:focus-visible {
  outline: none;
}

input {
  background: var(--color-background);
}

input::placeholder {
 color: var(--color-unnoticeble);
}

#menu {
  list-style-type: none;
  font-size: 1.1rem;
  padding-left: 0rem;
  margin: 0;
}

#menu > li {
  display: inline;
}

#menu > li:not(:last-child)::after {
  content: "/";
  margin-right: 1rem;
  margin-left: 1rem;
  color: var(--color-unnoticeble);
}

#content {
  max-width: var(--width-content);
  padding: var(--padding-content);
  position: relative;
  margin: 0 auto;
  min-height: 80vh;
}

#admin-menu {
  text-align: right;
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  cursor: pointer;
  color: var(--color-simple);
  border: 1px solid var(--color-simple);
  padding: 0.2rem;
}

#admin-menu > ul {
  display: none;
  list-style-type: none;
}
  
#admin-menu:hover > ul {
  padding: 0px;
  margin: 0px;
  display: block;
  text-align: left;
}

#admin-menu > hr {
  display: none;
  margin-top: 0.5rem;
  margin-bottom: 0.2rem;
  color: var(--color-simple);
}

#admin-menu:hover > hr {
  display: block;
}

#admin-menu > ul > li:hover {
  color: var(--color-feature);
}

input {
  border: 1px solid var(--color-feature);
}

#not-found-message {
  margin: 0;
  position: absolute;
  top: 20%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#change-theme {
  border: 1px solid var(--color-feature);
  padding: 0.3rem;
  color: var(--color-background);
  background: var(--color-feature);
  cursor: pointer;
  font-size: 1rem;
  height: fit-content;
  left: 2rem;
  position: absolute;
  transition: 0.10s;
}

#change-theme.moved {
  transform: rotate(360deg);
  transition: .10s;
  /* background: var(--color-feature);
  color: var(--color-background); */
}

.icon-moon-o::before {
    aspect-ratio: 1 / 1;
    display: block;
    text-align: center;
    width: 1rem;
}

